Implementada funcionalidad básica del campo de búsqueda en la página de asignación de cursos.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -30,12 +30,31 @@
                             <input type="submit" value="Buscar" />
                         </p>
                     </form>
+
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Cursos
+                            </th>
+                        </tr>
+
+                        @foreach (var item in Model.Cursos)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nombre)
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+
                 </div>
                 <div class="col-sm-4">
                     <h1>Tus formularios</h1>
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
-                        <a href="#" class="list-group-item list-group-item-action">Curso</a>
+                        <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
                         <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
                     </div>
                 </div>
