--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -46,7 +46,7 @@
                                             </div>
                                             <br />
                                             <div class="form-group">
-                                                <input type="submit" value="Acceder" name="Acceder" />
+                                                <input type="submit" value="Ingresar" name="Ingresar" />
                                             </div>
 
                                             <div class="form-group">
