--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <h1>Buscar Cursos</h1>
-                    <form asp-controller="Movies" asp-action="Index">
+                    <form asp-controller="AsignarFormularios" asp-action="Index">
                         <p>
                             Nombre: <input type="text" name="SearchString">
                             <input type="submit" value="Buscar" />
