--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Opiniometro_WebApp.Models.Item
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear Pregunta";
 }
 
-<h2>Create</h2>
+<h2>Crear Pregunta</h2>
 
 
 @using (Html.BeginForm()) 
@@ -31,11 +31,11 @@
         </div>
     </div>
     <script>
-@*Aqui capturamos los eventos del combo box. *@
+        @*Aqui capturamos los eventos del combo box. *@
         function seleccionarTipoPregunta()
         {
-            var x = document.getElementById("tipoPregunta").value;
-            document.getElementById("demo").innerHTML = "Seleccionaste: " + x;
+            var seleccion = document.getElementById("tipoPregunta").value;
+            //document.getElementById("demo").innerHTML = "Seleccionaste: " + seleccion;
 
         }
     </script>
@@ -60,8 +60,8 @@
         @Html.LabelFor(model => model.TieneObservacion, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @*<div class="checkbox">
-                    @Html.EditorFor(model => model.TieneObservacion)
-                    @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.TieneObservacion)
+                        @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
                 </div>*@
             @*Combobox *@
             <select id="observacion" onchange="seleccionarObservacion()">
@@ -72,34 +72,37 @@
         </div>
     </div>
     <script>
-@*Aqui capturamos los eventos del combo box. *@
+        @*Aqui capturamos los eventos del combo box. *@
         function seleccionarObservacion()
         {
-            var x = document.getElementById("observacion").value;
-            document.getElementById("demo1").innerHTML = "Seleccionaste: " + x;
-
+            var seleccion = document.getElementById("observacion").value;
+            if (seleccion == "Si")
+                @Html.EditorFor(model => model.TieneObservacion, true);
+            else 
+                model => model.TieneObservacion = false
+            //document.getElementById("demo1").innerHTML = "Seleccionaste: " + seleccion;
         }
     </script>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-default" />
+        @*<div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Crear" class="btn btn-secondary" />
+            </div>
         </div>
-    </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Vista Previa" class="btn btn-secondary" />
+            </div>
+        </div>*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Vista Previa" class="btn btn-primary" />
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Cancelar" class="btn btn-default" />
+            <input type="submit" value="Crear" class="btn btn-secondary" />
+            <input type="submit" value="Vista Previa" class="btn btn-secondary" />
+            <input type="submit" value="Cancelar" class="btn btn-secondary" />
         </div>
     </div>
 </div>
-            }
-
-
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
