--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Crear Pregunta</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Item</h4>
+    @*<h4>Item</h4>*@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -35,7 +35,7 @@
         function seleccionarTipoPregunta()
         {
             var seleccionTipoPregunta = document.getElementById("tipoPregunta").value;
-            document.getElementById("demo").innerHTML = "Seleccionaste: " + seleccionTipoPregunta;
+            document.getElementById("tipoPreguntaID").innerHTML = "Seleccionaste: " + seleccionTipoPregunta;
 
         }
     </script>
@@ -97,21 +97,35 @@
         }
     </script>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-default" />
-        </div>
+ <div class="form-group">
+     <div class="col-md-offset-2 col-md-10">
+     <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()"/>
+         <input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>
+         <input type="submit" value="Cancelar" class="btn btn-secondary" p id="botonCancelar" onclick="accionBotonCancelar()" />
+     </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Vista Previa" class="btn btn-default" />
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Cancelar" class="btn btn-default" />
-        </div>
-    </div>
+    @* La accion que sucede al seleccionar boton Crear *@
+    <script>
+        function accionBotonCrear() {
+            document.getElementById("botonCrear").style.color = "green";
+           
+        }
+    </script>
+
+    @* La accion que sucede al seleccionar boton Vista Previa *@
+    <script>
+        function accionBotonVistaPrevia() {
+            document.getElementById("botonVistaPrevia").style.color = "blue";
+        }
+    </script>
+
+    @* La accion que sucede al seleccionar boton Cancelar *@
+    <script>
+        function accionBotonCancelar() {
+            document.getElementById("botonCancelar").style.color = "red";
+        }
+    </script>
+
 </div>
             }
 
