cambio de vista crear formulario y desabilitar botones cuando no se deban poder usar

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -97,13 +97,15 @@
         }
     </script>
 
+    @* Creacion de botones en la misma linea y con color gris *@
  <div class="form-group">
      <div class="col-md-offset-2 col-md-10">
-     <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()"/>
-         <input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>
+     <input type="submit" value="Crear" disabled class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()"/>
+         <input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>
          <input type="submit" value="Cancelar" class="btn btn-secondary" p id="botonCancelar" onclick="accionBotonCancelar()" />
      </div>
     </div>
+
     @* La accion que sucede al seleccionar boton Crear *@
     <script>
         function accionBotonCrear() {
