--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -16,7 +16,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.CodigoFormulario, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
@@ -49,17 +49,20 @@
 
     @* Accion al seleccionar el boton de vista previa de formulario*@
     @*<script>
-        function accionBotonVistaPreviaFormulario() {
-            document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
-        }
-    </script>*@
+            function accionBotonVistaPreviaFormulario() {
+                document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
+            }
+        </script>*@
 
     @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
     <script>
         function accionBotonCancelarFormulario() {
-            document.getElementById("botonCancelarFormulario").style.color = "red";
+                document.getElementById("botonCancelarFormulario").style.color = "red";
+            
         }
     </script>
+
+ 
 
 
 </div>
