--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -41,7 +41,7 @@
     </script>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TextoPregunta, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Texto Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TextoPregunta, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TextoPregunta, "", new { @class = "text-danger" })
@@ -73,7 +73,7 @@
     </script>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TieneObservacion, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @*<div class="checkbox">
                     @Html.EditorFor(model => model.TieneObservacion)
