Funcionalidad básica del layout
tiene la redirección a contactos y a "about" para probar

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Content/bootstrap.css
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Content/bootstrap.css
@@ -268,6 +268,60 @@ th {
   src: url("../fonts/glyphicons-halflings-regular.eot");
   src: url("../fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/glyphicons-halflings-regular.woff2") format("woff2"), url("../fonts/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  position:relative;
+ display: inline-block;
+}
+
+.dropdown .dropbtn {
+
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: gray;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: blue;
+}
+
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 .glyphicon {
   position: relative;
   top: 1px;
