--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Cargar usuarios", "CargarUsuarios")
+    @Html.ActionLink("Cargar usuarios", "CargarArchivo")
 </p>
 
 
