--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -17,34 +17,65 @@
 <body>
 
     <div>
-        <h1>Asignación de cursos</h1>
+        <h1>Asignación de formularios</h1>
     </div>
 
     <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    <h1>Buscar Cursos</h1>
-                    <form asp-controller="AsignarFormularios" asp-action="Index">
+                    <h1>Buscar grupos</h1>
+
+                    
+
+                    <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
+                    <!--<form asp-controller="AsignarFormularios" asp-action="Index">
                         <p>
                             Nombre: <input type="text" name="SearchString">
                             <input type="submit" value="Buscar" />
                         </p>
-                    </form>
+                    </form>-->
+
+                    <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
+                    @using (Html.BeginForm())
+                    {
+                        <p>
+                            Nombre del curso: @Html.TextBox("SearchString")
+                            <input type="submit" value="Buscar" />
+                        </p>
+                    }
 
                     <table class="table">
                         <tr>
                             <th>
-                                Cursos
+                                Curso
+                            </th>
+                            <th>
+                                Ciclo
+                            </th>
+                            <th>
+                                Numero de grupo
+                            </th>
+                            <th>
+                                Seleccionar para asignar
                             </th>
                         </tr>
 
-                        @foreach (var item in Model.Cursos)
+                        @foreach (var item in Model.Grupos)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Nombre)
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.nombreCurso)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.numero)
+                            </td>
+                            <td>
+                                <input type="checkbox" name="Curso" value="Curso"><br>
+                            </td>
+                        </tr>
                         }
 
                     </table>
