--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -25,8 +25,6 @@
                 <div class="col-sm-8">
                     <h1>Buscar grupos</h1>
 
-                    
-
                     <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
                     <!--<form asp-controller="AsignarFormularios" asp-action="Index">
                         <p>
@@ -38,14 +36,18 @@
                     <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
                     @using (Html.BeginForm())
                     {
+                        <!-- Buscador -->
                         <p>
                             Nombre del curso: @Html.TextBox("SearchString")
                             <input type="submit" value="Buscar" />
                         </p>
                     }
 
+                    <!-- Tabla de grupos -->
                     <table class="table">
+                        <!-- Table row (fila) de encabezados. -->
                         <tr>
+                            <!-- Table header -->
                             <th>
                                 Curso
                             </th>
@@ -60,18 +62,24 @@
                             </th>
                         </tr>
 
+                        <!-- Para cada item en Model::Grupos... -->
                         @foreach (var item in Model.Grupos)
                         {
+                            <!-- Table row (fila) de elementos -->
                         <tr>
+                            <!-- Nombre de curso -->
                             <td>
                                 @Html.DisplayFor(modelItem => item.nombreCurso)
                             </td>
+                            <!-- Año -->
                             <td>
                                 @Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)
                             </td>
+                            <!-- Numero de grupo -->
                             <td>
                                 @Html.DisplayFor(modelItem => item.numero)
                             </td>
+                            <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
                             <td>
                                 <input type="checkbox" name="Curso" value="Curso"><br>
                             </td>
