Cambios a los filtros.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -54,8 +54,12 @@
 
             <div class="col-sm-4">
                 <h1>Búsqueda Avanzada</h1>
-                @Html.DropDownList("Carreras", null, htmlAttributes: new { @class = "form-control" })
-                @Html.DropDownList("Cursos", null, htmlAttributes: new { @class = "form-control" })
+                <h3>Unidad Académica</h3>
+                @Html.DropDownList("Unidad", null, htmlAttributes: new { @class = "form-control" }) <br />
+                <h3>Carrera</h3>
+                @Html.DropDownList("Carreras", null, htmlAttributes: new { @class = "form-control" }) <br />
+                <h3>Curso</h3>
+                @Html.DropDownList("Cursos", null, htmlAttributes: new { @class = "form-control" }) 
             </div>  
             
             <div class="col-sm-4">
