Arreglo mayores de configuración con la base y la web app para evitar conflictos.  Se rehizo el controlador Seleccion_Unica, se arregló el problema con [ValidateAntiForgeryToken], se agregaron tablas al modelo.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.SeleccionUnica
+﻿@model Opiniometro_WebApp.Models.Seleccion_Unica
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>SeleccionUnica</h4>
+    <h4>Seleccion_Unica</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
