--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Opiniometro_WebApp.Models.SeleccionUnica>
+﻿@model IEnumerable<Opiniometro_WebApp.Models.Seleccion_Unica>
 
 @{
     ViewBag.Title = "Index";
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Item.TextoPregunta)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ItemID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ItemID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ItemID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.ItemId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ItemId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ItemId })
         </td>
     </tr>
 }
