--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.SeleccionUnica
+﻿@model Opiniometro_WebApp.Models.Seleccion_Unica
 
 @{
     ViewBag.Title = "Create";
@@ -6,15 +6,22 @@
 
 <h2>Create</h2>
 
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>SeleccionUnica</h4>
+        <h4>Seleccion_Unica</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ItemId, "ItemId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ItemId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.IsaLikeDislike, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -36,7 +43,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
