--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Delete.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seleccion_Unica/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.SeleccionUnica
+﻿@model Opiniometro_WebApp.Models.Seleccion_Unica
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>SeleccionUnica</h4>
+    <h4>Seleccion_Unica</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
