--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -31,47 +31,92 @@
                     </p>
                 </form>
 
-
-                <table class="table">
-                    <tr>
-                        <th>
-                            Cursos
-                        </th>
-                    </tr>
-
-                    @*@foreach (var item in Model.Cursos)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Nombre)
-                            </td>
-                        </tr>
-                    }*@
-
-                </table>
-
-            </div>
-
-            <div class="col-sm-4">
-                <h1>Búsqueda Avanzada</h1>
-                <h3>Unidad Académica</h3>
-                @Html.DropDownList("Unidad", null, htmlAttributes: new { @class = "form-control" }) <br />
-                <h3>Carrera</h3>
-                @Html.DropDownList("Carreras", null, htmlAttributes: new { @class = "form-control" }) <br />
-                <h3>Curso</h3>
-                @Html.DropDownList("Cursos", null, htmlAttributes: new { @class = "form-control" }) 
-            </div>  
-            
-            <div class="col-sm-4">
-                <h1>Tus formularios</h1>
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
-                    <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
-                    <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Curso, "Ciclo", new { @class = "control-label col-sm-8" })
+                    <div class="col-sm-8">
+                        @Html.DropDownList("Ciclo")
+                        @Html.ValidationMessageFor(model => model.Curso)
+                    </div>
                 </div>
-            </div>
+
+                <div class="form-group">
+                    @Html.Hidden("unidad", null, new { @codigo = "unidad" })
+                    @Html.LabelFor(model => model.Curso, "Unidad Académica", new { @class = "control-label col-sm-8" })
+                    <div class="col-sm-8">
+                        @Html.DropDownList("Unidad", (SelectList)ViewBag.Unidad,
+new { onchange = "document.getElementById('unidad').value = " +
+"document.getElementById('Curso').value; this.form.submit();" })
+
+                        @{
+                            <script>
+                                document.getElementById("unidad").value = "";
+                            </script>}
+                            @Html.ValidationMessageFor(model => model.Curso)
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.Hidden("carrera", null, new { @codigo = "carrera" })
+                        @Html.LabelFor(model => model.Curso, "Carrera", new { @class = "control-label col-sm-8" })
+                        <div class="col-sm-8">
+                            @Html.DropDownList("Carreras", (SelectList)ViewBag.Carreras,
+                     new { onchange = "document.getElementById('carrera').value = " +
+                     "document.getElementById('Curso').value; this.form.submit();" })
+
+                            @{
+                                <script>
+                                    document.getElementById("carrera").value = "";
+                                </script>}
+                            @Html.ValidationMessageFor(model => model.Curso)
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Curso, "Curso", new { @class = "control-label col-sm-8" })
+                        <div class="col-sm-8">
+                            @Html.DropDownList("Curso")
+                            @Html.ValidationMessageFor(model => model.Curso)
+                        </div>
+                    </div>
+
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Cursos
+                            </th>
+                        </tr>
+
+                        @foreach (var item in Model.Curso)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nombre)
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+
+                </div>
+
+                    @*<h3>Unidad Académica</h3>
+            @Html.DropDownList("Unidad", null, htmlAttributes: new { @class = "form-control" }) <br />
+            <h3>Carrera</h3>
+            @Html.DropDownList("Carreras", null, htmlAttributes: new { @class = "form-control" }) <br />
+            <h3>Curso</h3>
+            @Html.DropDownList("Cursos", null, htmlAttributes: new { @class = "form-control" })*@
+                
+
+                    <div class="col-sm-4">
+                        <h1>Tus formularios</h1>
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
+                        </div>
+                    </div>
         </div>
-        </div>
+    </div>
 
 </body>
 </html>
