--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         Usuario
                         <i class="fa fa-caret-down"></i>
                     </button>
-                    <div class="dropdown-content">
+                    <div class="dropdown-contentt">
                         <a onclick="location.href='@Url.Action("Contact", "Home")';return false;">Insertar Usuario</a>
                         <a onclick="location.href='@Url.Action("About", "Home")';return false;">Editar información de otros usuarios</a>
                     </div>
@@ -38,9 +38,9 @@
                         Evaluaciones
                         <i class="fa fa-caret-down"></i>
                     </button>
-                    <div class="dropdown-content">
+                    <div class="dropdown-contentt">
                         <a onclick="location.href='@Url.Action("About", "Home")';return false;" > Insertar Formulario </a>
-                        <a onclick="location.href='@Url.Action("About", "Home")';return false;">Asignar Formulario</a>
+                        <a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a>
                         <a onclick="location.href='@Url.Action("About", "Home")';return false;">Visualizar resultados evaluaciones</a>
                     </div>
                 </div> 
