--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -16,10 +16,12 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2"}  @id = "codiguito" @oninput = "codigoLleno()")
+
         <div class="col-md-10">
             @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
+
         </div>
     </div>
 
@@ -34,9 +36,9 @@
     @* Creacion de los tres botones de la forma que el PO quiere que se visualicen siempre *@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" disabled value="Crear" class="btn btn-secondary" p id="botonCrearFormulario" onclick="accionBotonCrearFormulario()" />
+            <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario" onclick="accionBotonCrearFormulario()" />
             @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
-            <input type="submit" value="Cancelar" class="btn btn-secondary" p id="botonCancelarFormulario" onclick="accionBotonCancelarFormulario()" />
+            <input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelarFormulario()" />
         </div>
     </div>
 
@@ -57,12 +59,23 @@
     @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
     <script>
         function accionBotonCancelarFormulario() {
-                document.getElementById("botonCancelarFormulario").style.color = "red";
-            
+
+            document.getElementById("botonCancelarFormulario").style.color = "red";
+
         }
     </script>
 
- 
+    <p id="demo"></p>
+    <script>
+        function codigoLleno() {
+
+            var x = document.getElementById("codiguito").value;
+            document.getElementById("demo").innerHTML = "You wrote: " + x;
+
+        }
+    </script>
+
+
 
 
 </div>
