--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -12,7 +12,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
+    <style>
+        .fixed_header {
+            table-layout: fixed;
+            border-collapse: collapse;
+        }
+        .fixed_header tbody {
+            display: block;
+            width: 100%;
+            overflow: auto;
+            height: 300px;
+        }
+        .fixed_header thead tr {
+            display: block;
+        }
+        .fixed_header th {
+            height: 50px;
+        }
+        .fixed_header th, .fixed_header td {
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
 
@@ -52,47 +72,45 @@
                         <div class="panel-heading"><h3>Resultados:</h3></div>
                         <div class="panel-body">
                             <!-- Tabla de grupos -->
-                            <table class="table">
+                            <table class="fixed_header">
                                 <!-- Table row (fila) de encabezados. -->
-                                <tr>
+                                <thead>
                                     <!-- Table header -->
                                     <th>
-                                        Curso
-                                    </th>
+                                        <div align='center'>Curso</th>
                                     <th>
-                                        Ciclo
-                                    </th>
+                                        <div align='center'>Ciclo</th>
                                     <th>
-                                        Numero de grupo
-                                    </th>
+                                        <div align='center'> Numero de grupo</th>
                                     <th>
-                                        Seleccionar para asignar
-                                    </th>
-                                </tr>
-
-                                <!-- Para cada item en Model::Grupos... -->
-                                @foreach (var item in Model.Grupos)
-                                {
-                                    <!-- Table row (fila) de elementos -->
-                                    <tr>
-                                        <!-- Nombre de curso -->
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.nombreCurso)
-</td>
-                                        <!-- Año -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
-</td>
-                                        <!-- Numero de grupo -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
-</td>
-                                        <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
-                                        <td>
-                                            <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
-</td>
-                                    </tr>
-                                }
+                                        <div align='center'>Seleccionar para asignar</th>
+                                </thead>
+                                <tbody>
+                                    <!-- Para cada item en Model::Grupos... -->
+                                    @foreach (var item in Model.Grupos)
+                                    {
+                                        <!-- Table row (fila) de elementos -->
+                                        <tr>
+                                            <!-- Nombre de curso -->
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.nombreCurso)
+                                            </td>
+                                            <!-- Año -->
+                                            <td>
+                                                <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
+                                            </td>
+                                            <!-- Numero de grupo -->
+                                            <td>
+                                                <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
+                                            </td>
+                                            <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
+                                            <td>
+                                                <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                                
                             </table>
                         </div>
                     </div>                  
