--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Opiniometro_WebApp.Models.Seccion>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Banco de Secciones";
 }
 
-<h2>Index</h2>
+<h2>Banco de Secciones</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
