--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
@@ -35,11 +35,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SeleccionUnica.ItemID)
+            @Html.DisplayNameFor(model => model.Seleccion_Unica.ItemId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SeleccionUnica.ItemID)
+            @Html.DisplayFor(model => model.Seleccion_Unica.ItemId)
         </dd>
 
         <dt>
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
