cambio de vista index de secciones(banco de secciones)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
@@ -7,12 +7,18 @@
 <h2>Banco de Secciones</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <input type="submit" value="Crear Nueva Sección" class="btn btn-secondary"  id="botonNuevaSeccion" onclick="accionBotonNuevaSeccion()" />
 </p>
 <table class="table">
     <tr>
+
         <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.Label("Título")
+            @*@Html.DisplayNameFor(model => model.Titulo)*@
+        </th>
+        <th>
+            @Html.Label("Descripción")
+            @*@Html.DisplayNameFor(model => model.Descripcion)*@
         </th>
         <th></th>
     </tr>
@@ -20,12 +26,15 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Descripcion)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Titulo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Titulo }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Titulo })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Titulo }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Titulo }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Titulo })
         </td>
     </tr>
 }
